kube-myweb/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-clusterip
  labels:
    app: myweb
spec:
  type: ClusterIP
  ports:
  - port: 30081
    targetPort: 5000
  selector:
    app: myweb
