kube-myweb/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-nodeport
  labels:
    app: myweb
spec:
  type: NodePort
  ports:
  - port: 30081
    nodePort: 30080
    targetPort: 5000
  selector:
    app: myweb
